2005-08-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml.el (mml-generate-mime-1): Make the content type default to
	text/plain if the filename is not specified.

2005-08-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-uu.el (gnus-uu-save-article): Use insert-buffer-substring
	instead of insert-buffer.

	* message.el (message-yank-original): Ditto; set the mark at the
	end of the yanked message.

2005-07-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-next-page-1): Reduce the number of
	lines to scroll rather than to stop it.

	* mml.el (mml-generate-default-type): Add doc string.
	(mml-generate-mime-1): Use mm-default-file-encoding or make it
	default to application/octet-stream when determining the content
	type if it is not specified for the part or the mml contents; add
	a comment about mml-generate-default-type.

2005-07-29  Reiner Steib  <Reiner.Steib@gmx.de>

	* mml.el (mml-generate-mime-1): Use mm-default-file-encoding or
	make it default to application/octet-stream when determining the
	content type if it is not specified for the external contents.

2005-07-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2231.el (rfc2231-parse-string): Take care that not only a
	segmented parameter but also other parameters might be there.

2005-07-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-display-external): Delete temp file, directory
	and buffer immediately if the external process is exited.

2005-07-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-next-page-1): Don't scroll if there're
	fewer lines than that of scroll-margin.
	(gnus-article-prev-page): Narrow the range to bind scroll-in-place.

2005-07-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-next-page): Revert.
	(gnus-article-beginning-of-window): New macro.
	(gnus-article-next-page-1): Use it.
	(gnus-article-prev-page): Ditto.
	(gnus-article-edit-part): Use insert-buffer-substring instead of
	insert-buffer.